--- a/CFDI.BuildPdf/CFDI.BuildPdf.csproj
+++ b/CFDI.BuildPdf/CFDI.BuildPdf.csproj
@@ -4,11 +4,11 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 		<Authors>Julio Cesar Bautista Monsalvo</Authors>
 		<Company>JCBM</Company>
 		<Description>Librería para generar representación impres PDF desde un XML para CFDI 4.0 con complemento carta porte 3.1.</Description>
-		<PackageTags>AOP;Interceptor;Logging;Retry;Fallback;Audit;Validation</PackageTags>
+		<PackageTags>Cfdi;Pdf;RazorLight;DinkToPdf</PackageTags>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/Juliocbm/CFDI.BuildPdf</RepositoryUrl>
 		<PackageProjectUrl>https://github.com/Juliocbm/CFDI.BuildPdf</PackageProjectUrl>
@@ -17,12 +17,16 @@
 		<IncludeSymbols>true</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageIcon>logotipo.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
+
+
 	<ItemGroup>
-		<PackageReference Include="DinkToPdf" Version="1.0.8" />
-		<PackageReference Include="QRCoder" Version="1.6.0" />
-		<PackageReference Include="RazorLight" Version="2.3.1" />
+		<PackageReference Include="DinkToPdf" Version="1.0.8" PrivateAssets="all" />
+		<PackageReference Include="QRCoder" Version="1.6.0" PrivateAssets="all" />
+		<PackageReference Include="RazorLight" Version="2.3.1" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -35,6 +39,18 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="NativeBinaries\libwkhtmltox.dll" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="logotipo.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="CHANGELOG.md" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
