--- a/CFDI.BuildPdf/CFDI.BuildPdf.csproj
+++ b/CFDI.BuildPdf/CFDI.BuildPdf.csproj
@@ -42,15 +42,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="logotipo.png">
+	  <None Include="..\logotipo.png">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
-	  <None Update="README.md">
+	  <None Include="..\README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
-	  <None Include="CHANGELOG.md" Pack="true" PackagePath="" />
+	  <None Include="..\CHANGELOG.md" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
